frontpage.css
/* ... */
.soutiens h5 {
  margin: 10px;
  text-align: center;
}

.logos_org_container {
  display: flex;
  gap: 20px;
  justify-content: space-around;
}

.logos_org_container img {
  width: 50px;
  max-height: 50px;
}

.waves_animation {
  animation-name: waves;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  scale: 3.2;
  flex-shrink: 0;
  /* transform: translateY(-50%); */
}

.wave_1 {
  animation-delay: 1s;
  animation-duration: 6s;
}

.wave_2 {
  animation-duration: 4s;
}

.waves {
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);

  /* transform: translateY(-200vh); */
  /* top: 0; */
  position: absolute;
  width: 100vw;
  display: flex;
  gap: 50px;
  flex-direction: column;
  overflow: hidden;
}

@keyframes waves {
  0% {
  }
  100% {
    /* transform:translateX(calc(-1 * 100vw)); */
    transform: translateX(calc(100vw / 3));
  }
}

.main_scroll1 {
  transform: translateY(calc(var(--vh, 1vh) * -1 * 100)) !important;
  transition: 1s;
}
.main_scroll2 {
  transform: translateY(calc(var(--vh, 1vh) * -1 * 200)) !important;
  transition: 1s;
}

.main_scroll3 {
  transform: translateY(calc(var(--vh, 1vh) * -1 * 300)) !important;
  transition: 1s;
}

.infos {
  padding-top: 200px;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  transition: 1s;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  gap: 30px;
}
.container_infos{
  transform: translateY(calc((100vh - 300px ) / 2  - 50%));
  display: flex;
  gap:30px;
  flex-direction: column;
}
.info_bubble {
  position: fixed;
  width: 70vw;
  transition: 1s;
  height: 100px;
  background-color: #30405f;
  transform: translate(-85vw, 120px);
  display: flex;
  justify-content: center;
  align-items: center;
}

.info_visible {
  transform: translate(0px, 120px);
  transition: 1s;
}

.img_reco {
  height: 60vh;
  max-height: calc(100vh - 20px);
}

.info {
  height: 50px;
  width: 70vw;
  background-color: #445b8d;
  border-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.billetterie {
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  transition: 1s;
  margin-top: 200px;
}

.pass_container {
  height: 60vh;
  width: 80vw;
  transform: translate(calc(50vw - 50%));
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.pass {
  width: 90%;
  height: 50%;
  background-color: rgb(207, 231, 255);
  border-radius: 20px;
}
.pass h2 {
  color: #30405f;
  text-align: center;
}

ul {
  list-style-type: none;
  color: #1c2333;
}

